{
  "version": 4,
  "terraform_version": "0.14.0",
  "serial": 80,
  "lineage": "e5891409-ed5e-68c8-2f8b-946137a86262",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_alb",
      "name": "mb-alb-terraform",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "access_logs": [
              {
                "enabled": false
              }
            ],
            "arn": "arn:aws:elasticloadbalancing:us-east-1:509130302659:loadbalancer/app/mb-alb-terraform/f0807f9a5478a45d",
            "arn_suffix": "app/mb-alb-terraform/f0807f9a5478a45d",
            "dns_name": "mb-alb-terraform-191277290.us-east-1.elb.amazonaws.com",
            "drop_invalid_header_fields": false,
            "enable_deletion_protection": false,
            "enable_http2": true,
            "id": "arn:aws:elasticloadbalancing:us-east-1:509130302659:loadbalancer/app/mb-alb-terraform/f0807f9a5478a45d",
            "idle_timeout": 60,
            "internal": false,
            "ip_address_type": "ipv4",
            "load_balancer_type": "application",
            "name": "mb-alb-terraform",
            "security_groups": [
              "sg-03edc6293575f5b14"
            ],
            "subnet_mapping": [
              {
                "subnet_id": "subnet-092c0a02a065ea107"
              },
              {
                "subnet_id": "subnet-0c734794a15058eee"
              }
            ],
            "subnets": [
              "subnet-092c0a02a065ea107",
              "subnet-0c734794a15058eee"
            ],
            "tags": {
              "User": "marcos.bianchi"
            },
            "vpc_id": "vpc-0847245cfaeb59755",
            "zone_id": "Z35SXDOTRQ7X7K"
          },
          "dependencies": [
            "aws_security_group.mb_sg_tf",
            "aws_subnet.mb_subnet_az1_tf",
            "aws_subnet.mb_subnet_az2_tf",
            "aws_vpc.mb_vpc_tf"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_alb_listener",
      "name": "mb_alb_listener_terraform",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:elasticloadbalancing:us-east-1:509130302659:listener/app/mb-alb-terraform/f0807f9a5478a45d/b55eb9b8b8b76297",
            "certificate_arn": null,
            "default_action": [
              {
                "authenticate_cognito": [],
                "authenticate_oidc": [],
                "fixed_response": [],
                "forward": [],
                "order": 1,
                "redirect": [],
                "target_group_arn": "arn:aws:elasticloadbalancing:us-east-1:509130302659:targetgroup/mb-alb-target-group-terraform/19471b096ee1aeb3",
                "type": "forward"
              }
            ],
            "id": "arn:aws:elasticloadbalancing:us-east-1:509130302659:listener/app/mb-alb-terraform/f0807f9a5478a45d/b55eb9b8b8b76297",
            "load_balancer_arn": "arn:aws:elasticloadbalancing:us-east-1:509130302659:loadbalancer/app/mb-alb-terraform/f0807f9a5478a45d",
            "port": 80,
            "protocol": "HTTP",
            "ssl_policy": "",
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_alb.mb-alb-terraform",
            "aws_alb_target_group.mb-alb-target-group-terraform",
            "aws_security_group.mb_sg_tf",
            "aws_subnet.mb_subnet_az1_tf",
            "aws_subnet.mb_subnet_az2_tf",
            "aws_vpc.mb_vpc_tf"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_alb_target_group",
      "name": "mb-alb-target-group-terraform",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:elasticloadbalancing:us-east-1:509130302659:targetgroup/mb-alb-target-group-terraform/19471b096ee1aeb3",
            "arn_suffix": "targetgroup/mb-alb-target-group-terraform/19471b096ee1aeb3",
            "deregistration_delay": 300,
            "health_check": [
              {
                "enabled": true,
                "healthy_threshold": 5,
                "interval": 30,
                "matcher": "200",
                "path": "/",
                "port": "traffic-port",
                "protocol": "HTTP",
                "timeout": 5,
                "unhealthy_threshold": 2
              }
            ],
            "id": "arn:aws:elasticloadbalancing:us-east-1:509130302659:targetgroup/mb-alb-target-group-terraform/19471b096ee1aeb3",
            "lambda_multi_value_headers_enabled": false,
            "load_balancing_algorithm_type": "round_robin",
            "name": "mb-alb-target-group-terraform",
            "port": 80,
            "protocol": "HTTP",
            "proxy_protocol_v2": false,
            "slow_start": 0,
            "stickiness": [
              {
                "cookie_duration": 86400,
                "enabled": false,
                "type": "lb_cookie"
              }
            ],
            "tags": {
              "User": "marcos.bianchi"
            },
            "target_type": "instance",
            "vpc_id": "vpc-0847245cfaeb59755"
          },
          "dependencies": [
            "aws_vpc.mb_vpc_tf"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "mb_ec2_instance1_tf",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-0885b1f6bd170450c",
            "arn": "arn:aws:ec2:us-east-1:509130302659:instance/i-0c4f7345b064dd6cf",
            "associate_public_ip_address": true,
            "availability_zone": "us-east-1a",
            "cpu_core_count": 1,
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_termination": false,
            "ebs_optimized": false,
            "get_password_data": false,
            "hibernation": false,
            "id": "i-0c4f7345b064dd6cf",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "key_name": "mb-keys",
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional"
              }
            ],
            "monitoring": false,
            "primary_network_interface_id": "eni-00c249b9d3599705c",
            "private_dns": "ip-10-0-1-64.ec2.internal",
            "private_ip": "10.0.1.64",
            "public_ip": "3.238.162.40",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/sda1",
                "encrypted": false,
                "iops": 100,
                "volume_id": "vol-0d9bb325f6fa41e33",
                "volume_size": 8,
                "volume_type": "gp2"
              }
            ],
            "security_groups": [
              "sg-03edc6293575f5b14"
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-092c0a02a065ea107",
            "tags": {
              "Name": "mb_ec2_instance1_tf",
              "User": "marcos.bianchi"
            },
            "tenancy": "default",
            "vpc_security_group_ids": [
              "sg-03edc6293575f5b14"
            ]
          },
          "dependencies": [
            "aws_security_group.mb_sg_tf",
            "aws_subnet.mb_subnet_az1_tf",
            "aws_vpc.mb_vpc_tf"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "mb_ec2_instance2_tf",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-0885b1f6bd170450c",
            "arn": "arn:aws:ec2:us-east-1:509130302659:instance/i-07b45e78bb4e680b3",
            "associate_public_ip_address": true,
            "availability_zone": "us-east-1b",
            "cpu_core_count": 1,
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_termination": false,
            "ebs_optimized": false,
            "get_password_data": false,
            "hibernation": false,
            "id": "i-07b45e78bb4e680b3",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "key_name": "mb-keys",
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional"
              }
            ],
            "monitoring": false,
            "primary_network_interface_id": "eni-0e13ad048c24182ac",
            "private_dns": "ip-10-0-2-207.ec2.internal",
            "private_ip": "10.0.2.207",
            "public_ip": "3.87.195.252",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/sda1",
                "encrypted": false,
                "iops": 100,
                "volume_id": "vol-0e9754ce26475d98d",
                "volume_size": 8,
                "volume_type": "gp2"
              }
            ],
            "security_groups": [
              "sg-03edc6293575f5b14"
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-0c734794a15058eee",
            "tags": {
              "Name": "mb_ec2_instance2_tf",
              "User": "marcos.bianchi"
            },
            "tenancy": "default",
            "vpc_security_group_ids": [
              "sg-03edc6293575f5b14"
            ]
          },
          "dependencies": [
            "aws_security_group.mb_sg_tf",
            "aws_subnet.mb_subnet_az2_tf",
            "aws_vpc.mb_vpc_tf"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "mb_igw_terraform",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:509130302659:internet-gateway/igw-09154e7c51dd89982",
            "id": "igw-09154e7c51dd89982",
            "owner_id": "509130302659",
            "tags": {
              "User": "marcos.bianchi"
            },
            "vpc_id": "vpc-0847245cfaeb59755"
          },
          "dependencies": [
            "aws_vpc.mb_vpc_tf"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "mb_route_table_terraform",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtb-0e6ac34efbe635b43",
            "owner_id": "509130302659",
            "propagating_vgws": [],
            "route": [
              {
                "cidr_block": "0.0.0.0/0",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-09154e7c51dd89982",
                "instance_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "name": "mb_route_table_terraform"
            },
            "vpc_id": "vpc-0847245cfaeb59755"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_internet_gateway.mb_igw_terraform",
            "aws_vpc.mb_vpc_tf"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "mb_rt_assoc_subnet1_tf",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-00b20975a2c5d9e73",
            "route_table_id": "rtb-0e6ac34efbe635b43",
            "subnet_id": "subnet-092c0a02a065ea107"
          },
          "dependencies": [
            "aws_internet_gateway.mb_igw_terraform",
            "aws_route_table.mb_route_table_terraform",
            "aws_subnet.mb_subnet_az1_tf",
            "aws_vpc.mb_vpc_tf"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "mb_rt_assoc_subnet2_tf",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-02ab731f8a43965a9",
            "route_table_id": "rtb-0e6ac34efbe635b43",
            "subnet_id": "subnet-0c734794a15058eee"
          },
          "dependencies": [
            "aws_internet_gateway.mb_igw_terraform",
            "aws_route_table.mb_route_table_terraform",
            "aws_subnet.mb_subnet_az2_tf",
            "aws_vpc.mb_vpc_tf"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "mb_sg_tf",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:509130302659:security-group/sg-03edc6293575f5b14",
            "description": "Allow HTTP/S inbound traffic",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-03edc6293575f5b14",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "HTTP",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "HTTPS",
                "from_port": 443,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 443
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "SSH",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              }
            ],
            "name": "mb_sg_tf",
            "name_prefix": "",
            "owner_id": "509130302659",
            "revoke_rules_on_delete": false,
            "tags": {
              "User": "marcos.bianchi",
              "name": "mb_sg_tf"
            },
            "timeouts": null,
            "vpc_id": "vpc-0847245cfaeb59755"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.mb_vpc_tf"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "mb_subnet_az1_tf",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:509130302659:subnet/subnet-092c0a02a065ea107",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az1",
            "cidr_block": "10.0.1.0/24",
            "id": "subnet-092c0a02a065ea107",
            "map_public_ip_on_launch": false,
            "owner_id": "509130302659",
            "tags": {
              "Name": "mb_subnet_az1_tf",
              "User": "marcos.bianchi"
            },
            "vpc_id": "vpc-0847245cfaeb59755"
          },
          "dependencies": [
            "aws_vpc.mb_vpc_tf"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "mb_subnet_az2_tf",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:509130302659:subnet/subnet-0c734794a15058eee",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1b",
            "availability_zone_id": "use1-az2",
            "cidr_block": "10.0.2.0/24",
            "id": "subnet-0c734794a15058eee",
            "map_public_ip_on_launch": false,
            "owner_id": "509130302659",
            "tags": {
              "Name": "mb_subnet_az2_tf",
              "User": "marcos.bianchi"
            },
            "vpc_id": "vpc-0847245cfaeb59755"
          },
          "dependencies": [
            "aws_vpc.mb_vpc_tf"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc",
      "name": "mb_vpc_tf",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:509130302659:vpc/vpc-0847245cfaeb59755",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/16",
            "default_network_acl_id": "acl-00d26de8c865c0e51",
            "default_route_table_id": "rtb-06463f790d92a99ba",
            "default_security_group_id": "sg-07dad17b406aea4ae",
            "dhcp_options_id": "dopt-b99482db",
            "enable_classiclink": false,
            "enable_classiclink_dns_support": false,
            "enable_dns_hostnames": false,
            "enable_dns_support": true,
            "id": "vpc-0847245cfaeb59755",
            "instance_tenancy": "default",
            "main_route_table_id": "rtb-06463f790d92a99ba",
            "owner_id": "509130302659",
            "tags": {
              "User": "marcos.bianchi",
              "name": "mb_vpc_tf"
            }
          }
        }
      ]
    }
  ]
}